# FlashZap

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  connect_to_azure_db.py  notatki.txt  pyproject.toml  run_web.py
.cursor/rules/: task-list-create.mdc  task-list-extend.mdc  task-list-implementation.mdc  user-manual-update.mdc
.windsurf/rules/: prd-guidelines.md  project-structure-src.md  project-structure-tests.md  user-story-guidelines.md  writing-tests.md
.windsurf/workflows/: create-task-list.md
alembic/: env.py
alembic/versions/: 164973c869f4_add_mastery_level_and_next_review_date_.py  62941882f6f4_initial_migration_with_cards_table.py  be04b522466d_initial_migration_with_cards_table.py  d9421f82299c_merge_migration_branches.py  e1e336330745_change_next_review_date_to_date_type.py
current-job/: 01_migration_to_web_interface.md  task-US001_main-menu-navigation.md  task-US002_import-flashcards-from-json.md  task-US003_review-due-flashcard-with-ai-evaluation.md  task-US004_update-card-review-schedule-after-ai-grading.md  task-US005_browse_and_view_card.md  task-US006_edit-card-in-browse-view.md  task-add-logging.md
docs/: PRD.md  USER_MANUAL.md
src/flash_zap/: __main__.py  config.py  logger.py  main.py
src/flash_zap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_config.py  test_run_web.py
tests/test_core/: test_card_manager.py  test_review_session.py
tests/test_models/: test_card.py
tests/test_services/: test_ai_grader.py  (+2 more)
util-prompts/: create-PRD.md  create-task-list.mdc
(+56 files in other folders)
