[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flash_zap"
version = "0.0.1"
description = "A web-based flashcard application with AI-powered grading."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings",
    "google-generativeai",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "aiofiles",
]

[project.scripts]
flash_zap = "flash_zap.main:main"

[tool.setuptools.packages.find]
where = ["src"] 